<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="feature_text_cd_add_item">Tombol tambah data</string>
    <string name="feature_hint_search">Cari nama perikanan…</string>
    <string name="feature_text_name_comodity">Masukkan Nama Komoditas</string>
    <string name="feature_text_price_comodity">Masukkan Harga Komoditas</string>
    <string name="feature_text_city_area">Masukkan Area Kota</string>
    <string name="feature_text_province_area">Masukkan Area Provinsi</string>
    <string name="feature_text_size">Masukkan Size</string>
    <string name="feature_title_size">Filter Size</string>
    <string name="feature_title_area">Filter Area</string>
    <string name="feature_text_add_item">Tambahkan Item</string>
    <string name="feature_text_add_filter">Tambahkan Filter</string>
    <string name="feature_cd_back_button">Tombol Kembali</string>
    <string name="feature_cd_filter">Tombol Filter</string>
    <string name="feature_text_location">%s , %s</string>
    <string name="feature_msg_error">Harap lengkapi semua isian terlebih dahulu…</string>
    <string name="feature_msg_success_added">Data berhasil ditambahkan</string>
</resources>