<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add.AddActivity">

    <ImageButton
        android:id="@+id/ibBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_16x"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/feature_cd_back_button"
        android:padding="@dimen/spacing_16x"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feature_text_add_item"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_18x"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/ibBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ibBack" />

    <LinearLayout
        android:layout_width="@dimen/spacing_0x"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_16x"
        android:layout_marginTop="@dimen/spacing_16x"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ibBack">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilKomoditas"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_14x"
            android:backgroundTint="@android:color/transparent"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/blue"
            app:hintTextColor="@color/blue">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/feature_text_name_comodity"
                android:inputType="text"
                android:textColorHighlight="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPrice"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_14x"
            android:backgroundTint="@android:color/transparent"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/blue"
            app:hintTextColor="@color/blue">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/feature_text_price_comodity"
                android:inputType="number"
                android:textColorHighlight="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCityArea"
            style="@style/FisherySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_14x"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/blue">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteCity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/feature_text_city_area"
                android:inputType="none"
                app:hintTextColor="@color/blue" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilProvinceArea"
            style="@style/FisherySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_14x"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/blue">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteProvince"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/feature_text_province_area"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilSize"
            style="@style/FisherySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_14x"
            app:boxBackgroundColor="@color/white"
            app:boxStrokeColor="@color/blue"
            app:hintTextColor="@color/blue">

            <AutoCompleteTextView
                android:id="@+id/autoCompleteSize"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/feature_text_size"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_16x"
        android:layout_marginBottom="@dimen/spacing_16x"
        android:backgroundTint="@color/blue"
        android:paddingVertical="@dimen/spacing_16x"
        android:text="@string/feature_text_add_item"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>