<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.filter.FilterActivity">

    <ImageButton
        android:id="@+id/ibBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_16x"
        android:backgroundTint="@android:color/transparent"
        android:padding="@dimen/spacing_16x"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/feature_cd_back_button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feature_text_add_filter"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_18x"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/ibBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ibBack" />

    <TextView
        android:id="@+id/tvTitleSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feature_title_size"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_16x"
        app:layout_constraintTop_toBottomOf="@id/ibBack"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/spacing_16x"
        android:layout_marginTop="@dimen/spacing_x24"
        android:textStyle="bold"/>

    <ScrollView
        android:id="@+id/layoutSize"
        app:layout_constraintTop_toBottomOf="@id/tvTitleSize"
        android:layout_marginTop="@dimen/spacing_16x"
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioGroup
                android:id="@+id/rgSize"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </FrameLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tvTitleCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feature_title_area"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_16x"
        app:layout_constraintTop_toBottomOf="@id/layoutSize"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/spacing_16x"
        android:layout_marginTop="@dimen/spacing_x24"
        android:textStyle="bold"/>

    <ScrollView
        app:layout_constraintTop_toBottomOf="@id/tvTitleCity"
        android:layout_marginTop="@dimen/spacing_16x"
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioGroup
                android:id="@+id/rgArea"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </FrameLayout>
    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:paddingVertical="@dimen/spacing_16x"
        android:layout_marginHorizontal="@dimen/spacing_16x"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/spacing_16x"
        android:text="@string/feature_text_add_filter"/>
</androidx.constraintlayout.widget.ConstraintLayout>